# btcpay-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
btcpay_tools/: config.py
btcpay_tools/btcpay_subscription_nostr/: client.py  core.py  daemon.py  management_payload.py  nostr_transport.py  pos_item_lookup.py  service.py
scripts/: check_forbidden_commit_content.py
tests/: test_btcpay_subscription_nostr_config.py  test_btcpay_subscription_nostr_pos_item_lookup.py  test_btcpay_subscription_nostr_service.py  test_btcpay_subscription_nostr_transport.py
